2012-04-13
		* data element now contains indidivudal and aggregated data
		* more work on bug when paramaters in restrictions are not in model 

2012-04-13
		* removed warning when cell counts are < 5
		* restrictions.filename can now be a list of characters
		* worked on examples (textConnections moved in the call to fit.mpt)

2012-03-28
		* fixed bug when restricted parameters were not present in the model

2012-03-19
		* model.info does now return the rank of the Fisher Matrix.
		* summary.llks was renamed to fitting.runs

2012-02-25
		* fitting functions(fit.mptinr, fit.mpt, fit.model) contain the option to not
		  fit the aggregated data for multiple datasets.

2012-02-22
		* check.mpt now also displays number of categories and number of df for the model.
		
		* MPTinR-package.Rd updated to current version number and more functions.

2012-02-07
		* select.mpt now rounds information criteria before determining number of 
		 best fits (also added this to select.mpt.Rd)

2012-02-06
		* resolved small bug for select.mpt (wouldn't show aggregated FIA results
		when output = "full")
		
		* added show.messages parameter to fit.model, fit.mptinr and fit.mpt
		(including their documentation)
		
		* refitting for failed nlminb now uses multicore.

2012-02-04
		* small changes in Rd files for fit.model and fit.mptinr

2012-01-31
		* resolved small bug when fitting using mutlicore = "individual" 
		
		* changed Description
		
		* changed warning messages when optimization did not converge successfully.

2012-01-30
		* resolved small bug in calculating the FIA (moved routine to calculate 
		  the FIA to the wrapper functions fit.mpt and fit.model, changed argument
		  fia to fia.df in fit.mptinr). Changed fit.mptinr.Rd accordingly.
		
		* reading models should now work with connections (changed .get.mpt.model so that
		   connections are always read as "easy").
		
		* added function make.dt with help page (in make.eqn,.Rd)
		
		* added examples in fit.mptinr and fit.model