@@ -2,7 +2,7 @@ Package: MPTinR
 Type: Package
 Title: Analyze Multinomial Processing Tree Models
 Version: 0.8.9
-Date: 2012-04-14
+Date: 2012-04-16
 Author: Henrik Singmann and David Kellen
 Maintainer: Henrik Singmann <henrik.singmann@psychologie.uni-freiburg.de>
 Description: MPTinR provides a user-friendly way for the analysis of multinomial processing tree (MPT) models (e.g.,  Riefer, D. M., and Batchelder, W. H. [1988]. Multinomial modeling and the measurement of cognitive processes. Psychological Review, 95, 318-339) for single and multiple datasets. The main functions perform model fitting and model selection. Model selection can be done using AIC, BIC, or the minimum description length based Fischer information approximation (FIA) for MPT models. The model and restrictions can specified in external files or within an R script in an intuitive syntax. The 'classical' .EQN file format for model files is also supported. Besides MPTs, MPTinR can fit a wide variety of other cognitive models such as SDT models (see fit.model). MPTinR supports multicore fitting using the snowfall package.
